--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,28 @@
+spring:
+  main:
+    banner-mode: off
 
+---
+spring:
+  profiles:
+    active: localdb
+
+---
+spring:
+  config:
+    activate:
+      on-profile: localdb
+  h2:
+    console:
+      enabled: true
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:user-service
+    username: qa
+    password: qa
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        check_nullability: true
